--- a/ms-mongo/src/main/resources/application.properties
+++ b/ms-mongo/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.data.mongodb.host=ffborelli.ddns.net
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=kaique_felipe
+
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
