<feat> adicionando testes unitários no MSMongo

--- a/ms-mongo/pom.xml
+++ b/ms-mongo/pom.xml
@@ -85,7 +85,11 @@
 			<artifactId>jacoco-maven-plugin</artifactId>
 			<version>0.8.6</version>
 		</dependency>
-		
+				<dependency>
+			<groupId>de.flapdoodle.embed</groupId>
+			<artifactId>de.flapdoodle.embed.mongo</artifactId>
+			<scope>test</scope>
+		</dependency>
 		
 	</dependencies>
 
