--- a/ms-mongo/src/main/resources/application.properties
+++ b/ms-mongo/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=kaique_felipe
 
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+
+spring.mongodb.embedded.version=4.0.4
